[gd_scene load_steps=43 format=2]

[ext_resource path="res://ui/EGCheckBox.tres" type="Theme" id=1]
[ext_resource path="res://ui/envelopeDisplay/EnvelopeDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/EGSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/responseCurve/responseButton/ResponseButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://gfx/wave/0.png" type="Texture" id=5]
[ext_resource path="res://gfx/fonts/spelunkid_font_bold.tres" type="BitmapFont" id=6]
[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=7]
[ext_resource path="res://gfx/fonts/NoteFont.tres" type="BitmapFont" id=8]
[ext_resource path="res://ui/panels/EGPanel.gd" type="Script" id=9]
[ext_resource path="res://ui/panels/FixedFrequency.gd" type="Script" id=10]
[ext_resource path="res://ui/panels/EGWavePanel.gd" type="Script" id=11]
[ext_resource path="res://gfx/wave/6.png" type="Texture" id=12]
[ext_resource path="res://gfx/ui/vCheck.png" type="Texture" id=13]
[ext_resource path="res://gfx/wave/9.png" type="Texture" id=14]
[ext_resource path="res://gfx/wave/8.png" type="Texture" id=15]
[ext_resource path="res://gfx/wave/8a.png" type="Texture" id=16]
[ext_resource path="res://gfx/wave/1.png" type="Texture" id=17]
[ext_resource path="res://gfx/wave/3.png" type="Texture" id=18]
[ext_resource path="res://gfx/wave/2.png" type="Texture" id=19]
[ext_resource path="res://gfx/wave/5.png" type="Texture" id=20]
[ext_resource path="res://gfx/wave/7.png" type="Texture" id=21]
[ext_resource path="res://gfx/fonts/spelunkid_font.png" type="Texture" id=23]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.501961, 0.501961, 0.501961, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.25098 )
border_color = Color( 0.8, 0.8, 0.8, 0.498039 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.941176 )
border_color = Color( 0.8, 0.8, 0.8, 0.498039 )
corner_radius_top_left = 8
corner_radius_top_right = 2
corner_radius_bottom_right = 8
corner_radius_bottom_left = 2
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 16.0
expand_margin_bottom = 12.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.278431, 0.388235, 0.564706, 0.737255 )
border_width_left = 1
border_width_top = 1
border_color = Color( 0.8, 0.8, 0.8, 0.380392 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.0784314, 0.0862745, 0.14902, 0.737255 )
border_width_left = 1
border_width_top = 1
border_color = Color( 0.8, 0.8, 0.8, 0.380392 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0, 0, 0.305882 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.709804 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 2.0
expand_margin_right = 12.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.45098, 0.45098, 0.45098, 0.709804 )
corner_radius_top_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 2.0
expand_margin_right = 12.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 0.878431 )
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.6, 1, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_bottom_right = 3
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 3

[sub_resource type="Theme" id=18]
LineEdit/colors/cursor_color = Color( 0.941176, 0.941176, 0.941176, 0.376471 )
LineEdit/colors/font_color_selected = Color( 0.792157, 0.792157, 0.792157, 1 )
LineEdit/colors/selection_color = Color( 0.145098, 0.282353, 0.447059, 1 )
LineEdit/constants/minimum_spaces = 4
LineEdit/fonts/font = ExtResource( 7 )
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 17 )
LineEdit/styles/read_only = SubResource( 20 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.317647 )
TooltipLabel/fonts/font = ExtResource( 6 )
TooltipPanel/styles/panel = SubResource( 21 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 23 )
region = Rect2( 120, 61, 8, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 8.0
bg_color = Color( 0, 0, 0, 0.376471 )
border_color = Color( 0.8, 0.8, 0.8, 0.498039 )
corner_radius_bottom_right = 5
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 0.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0313726, 0.0313726, 0.0627451, 1 )
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.447059, 0.172549, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0784314, 0.141176, 0.27451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.145098, 0.447059, 0.176471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_bottom_right = 5
shadow_size = 1
shadow_offset = Vector2( 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.878431 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="EGPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -682.0
margin_bottom = -224.0
rect_min_size = Vector2( 342, 384 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frequency" type="GridContainer" parent="."]
visible = false
margin_left = 8.0
margin_top = 72.0
margin_right = 288.0
margin_bottom = 124.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Frequency" parent="Frequency" instance=ExtResource( 3 )]
margin_right = 280.0
size_flags_horizontal = 3
max_value = 18000.0
value = 440.0
exp_edit = true

[node name="H" type="HBoxContainer" parent="Frequency"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 52.0
custom_constants/separation = 4

[node name="Presets" type="OptionButton" parent="Frequency/H"]
margin_right = 138.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "A-4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fine Tune" parent="Frequency/H" instance=ExtResource( 3 )]
margin_left = 142.0
margin_right = 280.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
min_value = -2.0
max_value = 2.0
step = 0.01
tick_count = 9
ticks_on_borders = false

[node name="Tune" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 72.0
margin_right = 288.0
margin_bottom = 128.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Mult" parent="Tune" instance=ExtResource( 3 )]
margin_right = 132.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
min_value = 0.5
max_value = 16.0
value = 1.0
tick_count = 5
ticks_on_borders = false
associated_property = "mult"

[node name="Coarse" parent="Tune" instance=ExtResource( 3 )]
margin_left = 148.0
margin_right = 280.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
min_value = -12.0
max_value = 12.0
tick_count = 9
ticks_on_borders = false
associated_property = "coarse"

[node name="Fine" parent="Tune" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 132.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
min_value = -100.0
max_value = 100.0
tick_count = 9
ticks_on_borders = false
associated_property = "fine"

[node name="Detune" parent="Tune" instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 28.0
margin_right = 280.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.001
tick_count = 9
ticks_on_borders = false
associated_property = "Detune"
special_display = 4

[node name="Levels" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 136.0
margin_right = 328.0
margin_bottom = 192.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Total Level" parent="Levels" instance=ExtResource( 3 )]
margin_right = 152.0
size_flags_horizontal = 3
max_value = 1023.0
exp_edit = true
tick_count = 0
ticks_on_borders = false
associated_property = "tl"
useExpTicks = true

[node name="Attack Level" parent="Levels" instance=ExtResource( 3 )]
margin_left = 168.0
margin_right = 320.0
size_flags_horizontal = 3
max_value = 1023.0
exp_edit = true
tick_count = 0
ticks_on_borders = false
associated_property = "al"
useExpTicks = true

[node name="Decay Level" parent="Levels" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 152.0
margin_bottom = 48.0
size_flags_horizontal = 3
max_value = 1023.0
exp_edit = true
tick_count = 0
ticks_on_borders = false
associated_property = "dl"
useExpTicks = true

[node name="Sustain Level" parent="Levels" instance=ExtResource( 3 )]
margin_left = 168.0
margin_top = 28.0
margin_right = 320.0
margin_bottom = 48.0
size_flags_horizontal = 3
max_value = 1023.0
value = 1023.0
exp_edit = true
tick_count = 0
ticks_on_borders = false
associated_property = "sl"
useExpTicks = true

[node name="Rates" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 200.0
margin_right = 328.0
margin_bottom = 256.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 3
__meta__ = {
"_edit_group_": true
}

[node name="+Delay" parent="Rates" instance=ExtResource( 3 )]
margin_right = 96.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 65535.0
exp_edit = true
tick_count = 5
ticks_on_borders = false
associated_property = "delay"
special_display = 1

[node name="Attack" parent="Rates" instance=ExtResource( 3 )]
margin_left = 112.0
margin_right = 208.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 31.0
value = 31.0
tick_count = 5
ticks_on_borders = false
associated_property = "ar"

[node name="+Hold" parent="Rates" instance=ExtResource( 3 )]
margin_left = 224.0
margin_right = 320.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 65535.0
exp_edit = true
tick_count = 5
ticks_on_borders = false
associated_property = "hold"
special_display = 1

[node name="Decay" parent="Rates" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 31.0
value = 31.0
tick_count = 5
ticks_on_borders = false
associated_property = "dr"

[node name="Sustain" parent="Rates" instance=ExtResource( 3 )]
margin_left = 112.0
margin_top = 28.0
margin_right = 208.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 31.0
tick_count = 5
ticks_on_borders = false
associated_property = "sr"

[node name="Release" parent="Rates" instance=ExtResource( 3 )]
margin_left = 224.0
margin_top = 28.0
margin_right = 320.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 63.0
value = 48.0
tick_count = 5
ticks_on_borders = false
associated_property = "rr"

[node name="Tweak" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 72.0
custom_constants/hseparation = 16
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Feedback" parent="Tweak" instance=ExtResource( 3 )]
margin_right = 96.0
rect_min_size = Vector2( 48, 20 )
size_flags_horizontal = 3
max_value = 10.0
tick_count = 0
associated_property = "feedback"

[node name="AMS" parent="Tweak" instance=ExtResource( 3 )]
margin_left = 112.0
margin_right = 208.0
rect_min_size = Vector2( 96, 20 )
size_flags_horizontal = 3
max_value = 10.0
tick_count = 5
ticks_on_borders = false
associated_property = "ams"

[node name="WavePanel" type="Panel" parent="."]
margin_left = 216.0
margin_top = 32.0
margin_right = 336.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" parent="WavePanel" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 8.0
margin_right = -48.0
margin_bottom = 28.0
rect_min_size = Vector2( 48, 20 )
max_value = 9.0
tick_count = 0

[node name="Preview" type="TextureRect" parent="WavePanel"]
margin_left = 80.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="PopupDialog" parent="WavePanel"]
visible = true
margin_left = 128.0
margin_top = 32.0
margin_right = 200.0
margin_bottom = 176.0
rect_min_size = Vector2( 72, 144 )
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WavePanel/Popup"]
anchor_right = 1.0
margin_top = -12.0
margin_right = 8.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.384314, 0.717647, 0.831373, 0.639216 )
custom_fonts/font = ExtResource( 7 )
text = "Waveform="
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="G" type="GridContainer" parent="WavePanel/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave0" type="Button" parent="WavePanel/Popup/G"]
margin_right = 36.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 5 )

[node name="Wave1" type="Button" parent="WavePanel/Popup/G"]
margin_left = 38.0
margin_right = 74.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 19 )

[node name="Wave2" type="Button" parent="WavePanel/Popup/G"]
margin_top = 30.0
margin_right = 36.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 17 )

[node name="Wave3" type="Button" parent="WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 30.0
margin_right = 74.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 18 )

[node name="Wave4" type="Button" parent="WavePanel/Popup/G"]
margin_top = 60.0
margin_right = 36.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 20 )

[node name="Wave5" type="Button" parent="WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 12 )

[node name="Wave6" type="Button" parent="WavePanel/Popup/G"]
margin_top = 90.0
margin_right = 36.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 21 )

[node name="Wave7" type="Button" parent="WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 90.0
margin_right = 74.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 16 )

[node name="Wave8" type="Button" parent="WavePanel/Popup/G"]
margin_top = 120.0
margin_right = 36.0
margin_bottom = 148.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 15 )

[node name="Wave9" type="Button" parent="WavePanel/Popup/G"]
margin_left = 38.0
margin_top = 120.0
margin_right = 74.0
margin_bottom = 148.0
custom_styles/hover = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 14 )

[node name="Bank" type="SpinBox" parent="WavePanel"]
visible = false
margin_left = 16.0
margin_top = 17.0
margin_right = 68.0
margin_bottom = 31.0
theme = SubResource( 18 )
custom_icons/updown = SubResource( 19 )
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl" type="Label" parent="WavePanel/Bank"]
anchor_left = -0.0769231
anchor_right = -0.0769231
margin_top = -11.0
margin_right = 60.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 7 )
text = "Bank"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FixedRatio" type="CheckBox" parent="."]
anchor_left = -0.000978474
anchor_top = -0.00174216
anchor_right = -0.000978474
anchor_bottom = -0.00174216
margin_left = 289.0
margin_top = 73.0
margin_right = 335.0
margin_bottom = 129.0
custom_icons/checked = SubResource( 7 )
custom_icons/unchecked = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvelopeDisplay" parent="." instance=ExtResource( 2 )]
margin_top = 296.0
margin_right = 340.0
margin_bottom = 376.0
custom_styles/panel = SubResource( 11 )
sl = 1.0
Delay = 0
Attack = 63
Hold = 0
Decay = 63
Release = 48

[node name="Mute" type="Button" parent="."]
margin_left = 280.0
margin_top = 8.0
margin_right = 338.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 6 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
toggle_mode = true
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bypass" type="Button" parent="."]
margin_left = 216.0
margin_top = 8.0
margin_right = 274.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 6 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
toggle_mode = true
text = "Bypass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KSR" parent="." instance=ExtResource( 4 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 52.0
margin_bottom = 32.0

[node name="KSL" parent="." instance=ExtResource( 4 )]
margin_left = 64.0
margin_top = 8.0
margin_right = 108.0
margin_bottom = 32.0
text = "KSL"
intent = 2

[node name="Velocity" parent="." instance=ExtResource( 4 )]
margin_left = 120.0
margin_top = 8.0
margin_right = 204.0
margin_bottom = 32.0
text = "Velocity"
intent = 1

[node name="Duty" parent="." instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 264.0
margin_right = 264.0
margin_bottom = 284.0
size_flags_horizontal = 3
max_value = 65535.0
associated_property = "duty"

[node name="More" type="Button" parent="."]
anchor_top = 0.0106383
anchor_bottom = 0.0106383
margin_left = 278.0
margin_top = 265.915
margin_right = 334.0
margin_bottom = 281.915
theme = ExtResource( 1 )
text = "More }"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="PopupDialog" parent="More"]
visible = true
margin_left = 10.0
margin_top = 34.0
margin_right = 154.0
margin_bottom = 178.0
rect_min_size = Vector2( 144, 144 )
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="More/P"]
anchor_right = 1.0
margin_top = -8.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 12 )
custom_colors/font_color = Color( 0.384314, 0.717647, 0.831373, 0.639216 )
custom_fonts/font = ExtResource( 6 )
text = "Advanced Opts="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="More/P/Title"]
modulate = Color( 1, 1, 1, 0.12549 )
margin_top = 12.0
margin_right = 144.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="More/P"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = -10.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Phase Offset" parent="More/P/V" instance=ExtResource( 3 )]
margin_right = 144.0
rect_min_size = Vector2( 64, 20 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
associated_property = "phase_offset"
special_display = 4

[node name="Increment Offset" parent="More/P/V" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 144.0
margin_bottom = 56.0
rect_min_size = Vector2( 64, 20 )
size_flags_horizontal = 3
min_value = -32768.0
max_value = 32767.0
associated_property = "increment_offset"

[node name="Detune Randomness" parent="More/P/V" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 144.0
margin_bottom = 92.0
rect_min_size = Vector2( 64, 20 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
associated_property = "detune_randomness"
special_display = 4

[node name="OscSync" type="CheckBox" parent="More/P/V"]
margin_top = 108.0
margin_right = 144.0
margin_bottom = 126.0
theme = ExtResource( 1 )
text = "~ Osc Sync"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disabled" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
custom_styles/normal = SubResource( 15 )
text = "Unavailable"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Frequency/Frequency" to="." method="setFreq"]
[connection signal="item_selected" from="Frequency/H/Presets" to="Frequency" method="_on_Presets_item_selected"]
[connection signal="pressed" from="Frequency/H/Presets" to="Frequency" method="_on_Presets_pressed"]
[connection signal="value_changed" from="Frequency/H/Fine Tune" to="." method="setFreq"]
[connection signal="value_changed" from="WavePanel/Wave" to="WavePanel" method="_on_Wave_value_changed"]
[connection signal="gui_input" from="WavePanel/Preview" to="WavePanel" method="_on_Preview_gui_input"]
[connection signal="value_changed" from="WavePanel/Bank" to="WavePanel" method="_on_Bank_value_changed"]
[connection signal="toggled" from="FixedRatio" to="." method="_on_FixedRatio_toggled"]
[connection signal="toggled" from="Mute" to="." method="_on_Mute_toggled" binds= [ false ]]
[connection signal="toggled" from="Bypass" to="." method="_on_Mute_toggled" binds= [ true ]]
[connection signal="pressed" from="More" to="." method="_on_More_pressed"]
